versioned_docs/version-6.2/server/configuration/etl-configuration.mdx
---
title: "Configuration: ETL Options"
sidebar_label: ETL Configuration
description: "Tune RavenDB ETL task configuration with batch size limits, extraction intervals, and memory usage thresholds for data transformations."
sidebar_position: 8
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";
import ContentFrame from '@site/src/components/ContentFrame';
import Panel from '@site/src/components/Panel';

<Admonition type="note" title="">

* In this article:  
    * [ETL.ExtractAndTransformTimeoutInSec](../../server/configuration/etl-configuration.mdx#etlextractandtransformtimeoutinsec)
    * [ETL.MaxBatchSizeInMb](../../server/configuration/etl-configuration.mdx#etlmaxbatchsizeinmb)
    * [ETL.MaxFallbackTimeInSec](../../server/configuration/etl-configuration.mdx#etlmaxfallbacktimeinsec)
    * [ETL.MaxNumberOfExtractedDocuments](../../server/configuration/etl-configuration.mdx#etlmaxnumberofextracteddocuments)
    * [ETL.MaxNumberOfExtractedItems](../../server/configuration/etl-configuration.mdx#etlmaxnumberofextracteditems)
    * [ETL.OLAP.MaxNumberOfExtractedDocuments](../../server/configuration/etl-configuration.mdx#etlolapmaxnumberofextracteddocuments)
    * [ETL.Queue.AzureQueueStorage.TimeToLiveInSec](../../server/configuration/etl-configuration.mdx#etlqueueazurequeuestoragetimetoliveinsec)
    * [ETL.Queue.AzureQueueStorage.VisibilityTimeoutInSec](../../server/configuration/etl-configuration.mdx#etlqueueazurequeuestoragevisibilitytimeoutinsec)
    * [ETL.Queue.Kafka.InitTransactionsTimeoutInSec](../../server/configuration/etl-configuration.mdx#etlqueuekafkainittransactionstimeoutinsec)
    * [ETL.Raven.LoadRequestTimeoutInSec](../../server/configuration/etl-configuration.mdx#etlravenloadrequesttimeoutinsec)
    * [ETL.SQL.CommandTimeoutInSec](../../server/configuration/etl-configuration.mdx#etlsqlcommandtimeoutinsec)

</Admonition>

<ContentFrame>
    
## ETL.ExtractAndTransformTimeoutInSec

Number of seconds after which extraction and transformation will end and loading will start.

- **Type**: `int`
- **Default**: `30`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>

## ETL.MaxNumberOfExtractedDocuments

* Max number of extracted documents in an ETL batch.
* If value is not set, or set to null, the number of extracted documents fallbacks to `ETL.MaxNumberOfExtractedItems` value.

---
    
- **Type**: `int`
- **Default**: `8192`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.MaxBatchSizeInMb

* Maximum size in megabytes of a batch of data (documents and attachments) that will be sent to the destination as a single batch after transformation.
* If value is not set, or set to null, the size of the batch isn't limited in the processed ETL batch.
    
---
    
- **Type**: `Size`
- **Size Unit**: `Megabytes`
- **Default**: `64`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.MaxFallbackTimeInSec

* Maximum number of seconds the ETL process will be in a fallback mode after a load connection failure to a destination.
* The fallback mode means suspending the process.
    
---
    
- **Type**: `int`
- **Default**: `900`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.MaxNumberOfExtractedItems

* Max number of extracted items (documents, counters, etc) in an ETL batch.
* If value is not set, or set to null, the number of extracted items isn't limited in the processed ETL batch.
    
---
    
- **Type**: `int`
- **Default**: `8192`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.OLAP.MaxNumberOfExtractedDocuments

Max number of extracted documents in OLAP ETL batch.

- **Type**: `int`
- **Default**: `64 * 1024`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.Queue.AzureQueueStorage.TimeToLiveInSec

Lifespan of a message in the queue.

- **Type**: `int`
- **Default**: `604800` (7 days)
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.Queue.AzureQueueStorage.VisibilityTimeoutInSec

How long a message is hidden after being retrieved but not deleted.

- **Type**: `int`
- **Default**: `0`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.Queue.Kafka.InitTransactionsTimeoutInSec

Timeout to initialize transactions for the Kafka producer.

- **Type**: `int`
- **Default**: `60`
- **Scope**: Server-wide or per database

</ContentFrame>
<ContentFrame>
    
## ETL.Raven.LoadRequestTimeoutInSec

* Number of seconds after which the Raven ETL load request will time out.  
* Can be overridden per task by setting the `LoadRequestTimeoutInSec` property in the [Raven ETL configuration](../../server/ongoing-tasks/etl/raven.mdx),  
  or via [Studio](../../studio/database/tasks/ongoing-tasks/ravendb-etl-task.mdx#ravendb-etl-task-definition).
    
---    

- **Type**: `int`
- **Default**: `300`
- **Scope**: Server-wide or per database

</ContentFrame>    
<ContentFrame>
    
## ETL.SQL.CommandTimeoutInSec

* Number of seconds after which the SQL command will time out.  
* Can be overridden by setting the `CommandTimeout` property in the SQL ETL configuration.
    
---    

- **Type**: `int?`
- **Default**: `null` (use provider default)
- **Scope**: Server-wide or per database

</ContentFrame>    